[tool.poetry]
name = "simdak"
version = "0.1.0"
description = ""
authors = ["hexatester <revolusi147id@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.0"
bs4 = "^0.0.1"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
